--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Práctica de Página Estatica - Inicio</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="/scripts/funciones.js"></script>
+</head>
+<body id="body">
+    <header><center><h1>Pintores</h1></center></header>
+    <br>
+    <center><em><a href="van.html"><img src="van0.jpg" alt="texto" width="300"></a> 
+        <a href="pablo.html"><img src="pablo0.jpg" alt="texto" width="345"></a> 
+        <a href="dali.html"><img src="dali0.jpg" alt="texto" width="290"></a>
+        <a href="vinci.html"><img src="vinci0.jpg" alt="texto" width="315"></a></em></center>
+    <br><br>
 
+
+    <footer><big><p> Para contactar click<a href="mailto:martinez.campos.daphne.1.G@gmail.com">aquí</a></p></big> 
+    </footer>
+</body>
+</html>
