--- a/pintor-4.html
+++ b/pintor-4.html
@@ -1,1 +1,69 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Página de Pintores</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="/scripts/funciones.js"></script>
+</head>
+<body>
+    <center><header><h1>Biografía y sus obras</h1></header></center>    <br><br>
+     <div><img src="vinci0.jpg" alt="texto imagen" width="300" class="izquierda"><br><h2>Leonardo da Vinci</h2>
+        <p> Leonardo da Vinci nació el 15 de abril de 1452. Fue hijo de un notario y una campesina 
+            que nunca se casaron. Hasta los cinco años vivió en casa de su madre, pero después empezó 
+            a vivir con su padre y su madrastra y de vez en cuando con sus abuelos. Llegó a tener doce 
+            hermanastros y hermanastras que fueron mucho más jóvenes que él.
+            El año 1466 empieza a practicar diversas actividades en el taller de un escultor llamado 
+            Andrea del Verrocchio. Allí empieza a pintar, a esculpir y a diseñar.<br><br>
+            Leonardo da Vinci se convirtió en pintor, escultor, ingeniero, inventor, músico, escritor 
+            y arquitecto, y se le consideraba un gran genio. Siempre tuvo mucho interés en los estudios 
+            anatómicos del cuerpo humano y podía dibujar los órganos humanos con mucho detalle.
+            Fue aceptado en el gremio de pintores de Florencia en 1472 y abrió su propio taller de 
+            pintura y escultura, así que su fama comenzó a crecer y le encargaban muchos trabajos 
+            diferentes y muy importantes.<br><br>
+            Durante toda su vida estuvo al servicio de varios duques que le encargaban esculturas y 
+            pinturas de sus familias para enseñarlas en sus salones y sus jardines, pero lo que de 
+            verdad le interesaba era inventar nuevos vehículos, armas y objetos.
+            Aunque siempre estuvo creando y construyendo nuevas obras, las luchas que hubo mientras 
+            vivía, tanto las luchas y rebeliones que hubo después de su muerte, fueron las culpables 
+            de que muchas de las cosas que creó fueran destruidas, quemadas o perdidas, incluyendo 
+            sus restos que los tiraron en un lugar desconocido después de una guerra.
+            Murió el 2 de mayo de 1519 en Francia.<br><br>
+            Todas las obras de Leonardo da Vinci son conocidas, pero las más famosas son: el cuadro 
+            de “La última cena”, que lo pintó en un mural del monasterio de Santa Maria delle Grazie
+             en Milán; “La Gioconda”, que es más conocida como “La Monna Lisa”, y aún se debate si la 
+             mujer que está retratada en el cuadro existió de verdad o no; y “El hombre de Vitruvio”, 
+             que es un famoso dibujo que hizo sobre un hombre con 4 brazos y 4 piernas donde intentaba 
+             estudiar el cuerpo humano.<br>
+            También hizo muchas esculturas, pero ninguna ha podido llegar a nuestros días.
+            
+<br><br>
+        </p>
+    </div>
+    <br><br>
+    <h2>5 obras de arte de de él</h2>
+  <br>
+    <img src="v1.jpg" alt="texto imagen" width="300" class="izquierda"><br><p>La Gioconda</p>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
+    <img src="v2.jpg" alt="texto imagen" width="550" class="izquierda"><br><p>La última cena</p>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <img src="v3.jpg" alt="texto imagen" width="500" class="izquierda"><br><p> La batalla de Anghiari</p>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+    <img src="v4.jpg" alt="texto imagen" width="400" class="izquierda"><br><p>La dama del armiño</p>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br> <br><br><br><br><br>
+    <br>
+    <img src="v5.1.jpg" alt="texto imagen" width="350" class="izquierda"><br><p>Salvator Mundi</p>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br>
+
+<footer><a href="index.html">Volver al inicio</a><br><br> 
+<a href="vinci.html">Ir a biografía yobras de Leonardo da Vinci</a> <br><br>
+<a href="pablo.html">Ir a biografía y obras de Pablo Picasso</a><br><br> 
+<a href="dali.html">Ir a biografía y obras de Salvador Dalí</a>
+</footer>
+</body>
+</html>
